--- a/jupyter_notebooks/01 - Data Collection.ipynb
+++ b/jupyter_notebooks/01 - Data Collection.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {
     "id": "wZfF_j-Bz3i4",
     "outputId": "66943449-1436-4c3d-85c7-b85f9f78349b"
@@ -196,7 +196,7 @@
        "'/workspaces/pizza-not-pizza/jupyter_notebooks'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {
     "id": "TwHsQRWjz3i9",
     "outputId": "86849db3-cd2f-4cc5-ebb8-2d0caafa1a2c"
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {
     "id": "vz3S-_kjz3jA",
     "outputId": "00b79ae4-75d0-4a96-d193-ac9ef9847ea2"
@@ -252,7 +252,7 @@
        "'/workspaces/pizza-not-pizza'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +282,7 @@
      "text": [
       "Collecting kaggle==1.5.12\n",
       "  Downloading kaggle-1.5.12.tar.gz (58 kB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m59.0/59.0 kB\u001b[0m \u001b[31m1.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m59.0/59.0 kB\u001b[0m \u001b[31m1.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0mta \u001b[36m0:00:01\u001b[0m\n",
       "\u001b[?25h  Preparing metadata (setup.py) ... \u001b[?25ldone\n",
       "\u001b[?25hRequirement already satisfied: six>=1.10 in /home/codeany/.local/lib/python3.8/site-packages (from kaggle==1.5.12) (1.15.0)\n",
       "Requirement already satisfied: certifi in /home/codeany/.pyenv/versions/3.8.12/lib/python3.8/site-packages (from kaggle==1.5.12) (2023.7.22)\n",
@@ -290,20 +290,20 @@
       "Requirement already satisfied: requests in /home/codeany/.pyenv/versions/3.8.12/lib/python3.8/site-packages (from kaggle==1.5.12) (2.31.0)\n",
       "Collecting tqdm (from kaggle==1.5.12)\n",
       "  Downloading tqdm-4.66.1-py3-none-any.whl.metadata (57 kB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m57.6/57.6 kB\u001b[0m \u001b[31m4.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m57.6/57.6 kB\u001b[0m \u001b[31m4.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
       "\u001b[?25hCollecting python-slugify (from kaggle==1.5.12)\n",
       "  Downloading python_slugify-8.0.1-py2.py3-none-any.whl (9.7 kB)\n",
       "Requirement already satisfied: urllib3 in /home/codeany/.pyenv/versions/3.8.12/lib/python3.8/site-packages (from kaggle==1.5.12) (2.0.7)\n",
       "Collecting text-unidecode>=1.3 (from python-slugify->kaggle==1.5.12)\n",
       "  Downloading text_unidecode-1.3-py2.py3-none-any.whl (78 kB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m78.2/78.2 kB\u001b[0m \u001b[31m13.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m78.2/78.2 kB\u001b[0m \u001b[31m8.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
       "\u001b[?25hRequirement already satisfied: charset-normalizer<4,>=2 in /home/codeany/.pyenv/versions/3.8.12/lib/python3.8/site-packages (from requests->kaggle==1.5.12) (3.3.1)\n",
       "Requirement already satisfied: idna<4,>=2.5 in /home/codeany/.pyenv/versions/3.8.12/lib/python3.8/site-packages (from requests->kaggle==1.5.12) (3.4)\n",
       "Downloading tqdm-4.66.1-py3-none-any.whl (78 kB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m78.3/78.3 kB\u001b[0m \u001b[31m14.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m78.3/78.3 kB\u001b[0m \u001b[31m16.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
       "\u001b[?25hBuilding wheels for collected packages: kaggle\n",
       "  Building wheel for kaggle (setup.py) ... \u001b[?25ldone\n",
-      "\u001b[?25h  Created wheel for kaggle: filename=kaggle-1.5.12-py3-none-any.whl size=73026 sha256=6560cc6d17990f09119a7beb80b220ee2f4a488ad0538e81518a75a5fc28146c\n",
+      "\u001b[?25h  Created wheel for kaggle: filename=kaggle-1.5.12-py3-none-any.whl size=73026 sha256=c6cfdb33819c2eba39260d5f7c2759c865a286211e9eb6e600a2f3bb932b5b7b\n",
       "  Stored in directory: /home/codeany/.cache/pip/wheels/29/da/11/144cc25aebdaeb4931b231e25fd34b394e6a5725cbb2f50106\n",
       "Successfully built kaggle\n",
       "Installing collected packages: text-unidecode, tqdm, python-slugify, kaggle\n",
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,14 +341,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "pizza-not-pizza.zip: Skipping, found more recently modified local copy (use --force to force download)\n"
+      "Downloading pizza-not-pizza.zip to inputs/carlosrunner/pizza-not-pizza\n",
+      " 88%|██████████████████████████████████▌    | 89.0M/101M [00:02<00:00, 39.8MB/s]\n",
+      "100%|████████████████████████████████████████| 101M/101M [00:02<00:00, 38.1MB/s]\n"
      ]
     }
    ],
@@ -360,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {
     "id": "1eLEkw5O0ECa"
    },
@@ -416,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -442,17 +444,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Folder: not_pizza - has image file 983\n",
-      "Folder: not_pizza - has non-image file 0\n",
       "Folder: pizza - has image file 983\n",
-      "Folder: pizza - has non-image file 0\n"
+      "Folder: pizza - has non-image file 0\n",
+      "Folder: not_pizza - has image file 983\n",
+      "Folder: not_pizza - has non-image file 0\n"
      ]
     }
    ],
@@ -476,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -534,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
