Adding concatenation and docstrings to adhere to industry standards.

--- a/jupyter_notebooks/01 - Data Collection.ipynb
+++ b/jupyter_notebooks/01 - Data Collection.ipynb
@@ -25,12 +25,7 @@
     "\n",
     "## Outputs\n",
     "\n",
-    "* Generate Dataset: inputs/datasets/carlosrunner/pizza-not-pizza\n",
-    "\n",
-    "## Additional Comments\n",
-    "\n",
-    "* \n",
-    "\n"
+    "* Generate Dataset: inputs/datasets/carlosrunner/pizza-not-pizza"
    ]
   },
   {
@@ -419,27 +414,45 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The dataset from Kaggle automatically downloads a file called \"food101_subset.py\" which is uneccessary for this project. Pause here and delete that file from your repository's directory before continuing. With this excess file deleted, there is no need to perform any imputation on the remaining image datasets and they can be split into Train, Validation, and Test sets as is:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "def remove_non_image_files(my_data_dir):\n",
+    "    # Define the list of valid image file extensions\n",
     "    image_extension = ('.png', '.jpg', '.jpeg')\n",
+    "\n",
+    "    # List all folders in the specified directory\n",
     "    folders = os.listdir(my_data_dir)\n",
+    "\n",
+    "    # Iterate through each folder\n",
     "    for folder in folders:\n",
+    "        # List all files in the current folder\n",
     "        files = os.listdir(my_data_dir + '/' + folder)\n",
-    "        # print(files)\n",
-    "        i = []\n",
-    "        j = []\n",
+    "        \n",
+    "        i = [] # List to store non-image file count\n",
+    "        j = [] # List to store image file count\n",
+    "\n",
+    "        # Iterate through each file in the folder\n",
     "        for given_file in files:\n",
+    "            # Check if the file does not have a valid image extension\n",
     "            if not given_file.lower().endswith(image_extension):\n",
     "                file_location = my_data_dir + '/' + folder + '/' + given_file\n",
     "                os.remove(file_location)  # remove non image file\n",
-    "                i.append(1)\n",
+    "                i.append(1) # Increment non-image file count\n",
     "            else:\n",
-    "                j.append(1)\n",
+    "                j.append(1) # Increment image file count\n",
     "                pass\n",
+    "\n",
+    "        # Print the counts of image and non-image files for the current folder\n",
     "        print(f\"Folder: {folder} - has image file\", len(j))\n",
     "        print(f\"Folder: {folder} - has non-image file\", len(i))"
    ]
@@ -462,13 +475,6 @@
    ],
    "source": [
     "remove_non_image_files(my_data_dir='inputs/carlosrunner/pizza-not-pizza/pizza_not_pizza')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "As found previously, there is no explicitly missing or incorrectly formatted data. Therefore there is no need to perform any imputation on the dataset and it can be split into Train and Test sets as is."
    ]
   },
   {
@@ -555,66 +561,6 @@
    "source": [
     "---"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "NOTE"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "---"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "ltNetd085qHf"
-   },
-   "source": [
-    "# Push files to Repo"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "* If you don't need to push files to Repo, you may replace this section with \"Conclusions and Next Steps\" and state your conclusions and next steps."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "aKlnIozA4eQO",
-    "outputId": "fd09bc1f-adb1-4511-f6ce-492a6af570c0"
-   },
-   "outputs": [],
-   "source": [
-    "# import os\n",
-    "# try:\n",
-    "#     os.makedirs(name='outputs/datasets/cleaned')\n",
-    "# except Exception as e:\n",
-    "#     print(e)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
