--- a/jupyter_notebooks/03 - ModellingAndEvaluating.ipynb
+++ b/jupyter_notebooks/03 - ModellingAndEvaluating.ipynb
@@ -15,8 +15,10 @@
    "source": [
     "## Objectives\n",
     "\n",
-    "*   Answer business requirement 2: \n",
-    "    * The client is interested to tell whether a given cell contains pizza or not.\n",
+    "Answer business requirements 1, 2, and 7:\n",
+    "* Automated Pizza Detection: The system must automate the process of classifying images as either containing pizza or not-pizza. This automation should significantly reduce the time and effort required for manual image inspection.\r\n",
+    "*2. Prediction Accuracy: The client requires a reliable system capable of achieving high accuracy in classifying pizza and not-pizza images. The minimum acceptable accuracy should be defined based on the specific needs of the client\n",
+    "* Continuous Improvement: The system should support continuous improvement and model retraining to adapt to changes in image data patterns and to maintain high prediction accuracy..\n",
     "\n",
     "\n",
     "## Inputs\n",
@@ -34,12 +36,7 @@
     "* Save model.\n",
     "* Learning curve plot for model performance.\n",
     "* Model evaluation on pickle file.\n",
-    "* Prediction on the random image file.\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "## Additional Comments | Insights | Conclusions"
+    "* Prediction on the random image filns"
    ]
   },
   {
@@ -308,6 +305,7 @@
     "df_freq = pd.DataFrame([])\n",
     "for folder in ['train', 'validation', 'test']:\n",
     "    for label in labels:\n",
+    "        # Append a new row to the DataFrame with Set (folder), Label, and Frequency\n",
     "        df_freq = df_freq.append(\n",
     "            pd.Series(data={'Set': folder,\n",
     "                            'Label': label,\n",
@@ -316,15 +314,20 @@
     "            ignore_index=True\n",
     "        )\n",
     "\n",
+    "        # Print the number of images for each folder-label combination\n",
     "        print(\n",
     "            f\"* {folder} - {label}: {len(os.listdir(my_data_dir+'/'+ folder + '/' + label))} images\")\n",
     "\n",
+    "# Create a bar plot to visualize label distribution\n",
     "print(\"\\n\")\n",
     "sns.set_style(\"whitegrid\")\n",
     "plt.figure(figsize=(8, 5))\n",
     "sns.barplot(data=df_freq, x='Set', y='Frequency', hue='Label')\n",
+    "\n",
+    "# Save the plot as an image\n",
     "plt.savefig(f'{file_path}/labels_distribution.png',\n",
     "            bbox_inches='tight', dpi=150)\n",
+    "\n",
     "plt.show()"
    ]
   },
@@ -805,6 +808,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "61b6403f-fad1-40c0-a6b1-19d98c5463a7",
+   "metadata": {},
+   "source": [
+    "## ML model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a2ffdf5c-5cb9-4994-99cf-a7e9e435ac5e",
+   "metadata": {},
+   "source": [
+    "* ### Import model packages"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 36,
    "id": "b00d916d-e764-4361-b330-059f4628e71e",
@@ -812,7 +831,20 @@
    "outputs": [],
    "source": [
     "from tensorflow.keras.callbacks import EarlyStopping\n",
-    "early_stop = EarlyStopping(monitor='val_loss', patience=3)"
+    "from tensorflow.keras.applications import VGG16\n",
+    "from tensorflow.keras.models import Sequential\n",
+    "from tensorflow.keras.models import Model\n",
+    "from tensorflow.keras.optimizers import Adam\n",
+    "from tensorflow.keras.layers import Activation, Dropout, Flatten, Dense, Conv2D, MaxPooling2D, Dense\n",
+    "from tensorflow.keras.regularizers import l2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e0796d18-d157-4bc9-9b8d-7e8ddc31425b",
+   "metadata": {},
+   "source": [
+    "* ### Model "
    ]
   },
   {
@@ -857,17 +889,13 @@
     }
    ],
    "source": [
-    "from tensorflow.keras.applications import VGG16\n",
-    "from tensorflow.keras.models import Sequential\n",
-    "from tensorflow.keras.models import Model\n",
-    "from tensorflow.keras.optimizers import Adam\n",
-    "from tensorflow.keras.layers import Activation, Dropout, Flatten, Dense, Conv2D, MaxPooling2D, Dense\n",
-    "from tensorflow.keras.regularizers import l2\n",
+    "# Early Stopping to prevent overfitting\n",
+    "early_stop = EarlyStopping(monitor='val_loss', patience=3)\n",
     "\n",
     "# Load the pre-trained VGG16 model\n",
     "base_model = VGG16(weights='imagenet', include_top=False, input_shape=image_shape)\n",
     "\n",
-    "# Customize the top layers for your binary classification task\n",
+    "# Customize the top layers for binary classification task\n",
     "x = base_model.output\n",
     "x = Flatten()(x)\n",
     "\n",
@@ -892,42 +920,21 @@
     "# Compile the model\n",
     "model.compile(optimizer=Adam(learning_rate=0.001), loss='binary_crossentropy', metrics=['accuracy'])\n",
     "\n",
-    "# Train the model with your data\n",
+    "# Fit and Train the model with the data\n",
     "model.fit(train_set, \n",
     "          epochs=10, \n",
     "          steps_per_epoch=len(train_set.classes) // batch_size, \n",
     "          validation_data=validation_set, \n",
     "          callbacks=[early_stop], \n",
-    "          verbose=1)\n",
-    "\n",
-    "\n",
-    "# Load the pre-trained VGG16 model\n",
-    "#base_model = VGG16(weights='imagenet', include_top=False, input_shape=image_shape)\n",
-    "\n",
-    "# Customize the top layers for your binary classification task\n",
-    "#x = base_model.output\n",
-    "#x = Flatten()(x)\n",
-    "#x = Dense(32, activation='relu')(x)\n",
-    "#x = Dense(16, activation='relu')(x)\n",
-    "#predictions = Dense(1, activation='sigmoid')(x)\n",
-    "\n",
-    "# Create a new model by combining the base model and custom top layers\n",
-    "#model = Model(inputs=base_model.input, outputs=predictions)\n",
-    "\n",
-    "# Freeze the layers of the pre-trained model (optional)\n",
-    "#for layer in base_model.layers:\n",
-    "#    layer.trainable = False\n",
-    "\n",
-    "# Compile the model\n",
-    "#model.compile(optimizer=Adam(learning_rate=0.001), loss='binary_crossentropy', metrics=['accuracy'])\n",
-    "\n",
-    "# Train the model with your data\n",
-    "#model.fit(train_set, \n",
-    "#          epochs=5, \n",
-    "#          steps_per_epoch=len(train_set.classes) // batch_size, \n",
-    "#          validation_data=validation_set, \n",
-    "#          callbacks=[early_stop], \n",
-    "#          verbose=1)"
+    "          verbose=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e627f81c-40ac-4aa1-a354-71adf7ce2cf6",
+   "metadata": {},
+   "source": [
+    "## Save model"
    ]
   },
   {
@@ -944,242 +951,6 @@
   {
    "cell_type": "markdown",
    "id": "479362a5-538f-466d-9efd-5b9dcb429304",
-   "metadata": {},
-   "source": [
-    "---"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "61b6403f-fad1-40c0-a6b1-19d98c5463a7",
-   "metadata": {},
-   "source": [
-    "## ML model"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a2ffdf5c-5cb9-4994-99cf-a7e9e435ac5e",
-   "metadata": {},
-   "source": [
-    "* ### Import model packages"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "id": "5054f234-d290-49c7-9a69-37a72d41791e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#from tensorflow.keras.models import Sequential\n",
-    "#from tensorflow.keras.layers import Activation, Dropout, Flatten, Dense, Conv2D, MaxPooling2D"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e0796d18-d157-4bc9-9b8d-7e8ddc31425b",
-   "metadata": {},
-   "source": [
-    "* ### Model "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "id": "ca07aa75-e244-4602-95fb-3be113c5a8e2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#def create_tf_model():\n",
-    "#    model = Sequential()\n",
-    "\n",
-    "#    model.add(Conv2D(filters=32, kernel_size=(3, 3),\n",
-    "#              input_shape=image_shape, activation='relu', ))\n",
-    "#    model.add(MaxPooling2D(pool_size=(2, 2)))\n",
-    "\n",
-    "#    model.add(Conv2D(filters=64, kernel_size=(3, 3),\n",
-    "#              input_shape=image_shape, activation='relu', ))\n",
-    "#    model.add(MaxPooling2D(pool_size=(2, 2)))\n",
-    "\n",
-    "#    model.add(Conv2D(filters=64, kernel_size=(3, 3),\n",
-    "#              input_shape=image_shape, activation='relu', ))\n",
-    "#    model.add(MaxPooling2D(pool_size=(2, 2)))\n",
-    "\n",
-    "#    model.add(Flatten())\n",
-    "#    model.add(Dense(128, activation='relu'))\n",
-    "\n",
-    "#    model.add(Dropout(0.5))\n",
-    "#    model.add(Dense(1, activation='sigmoid'))\n",
-    "\n",
-    "#    model.compile(loss='binary_crossentropy',\n",
-    "#                  optimizer='adam',\n",
-    "#                  metrics=['accuracy'])\n",
-    "\n",
-    "#    return model"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "eae2ddf3-fb75-4bca-a7b9-a58cda8c778c",
-   "metadata": {},
-   "source": [
-    "* ### Model Summary "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "id": "a2157646-5f0d-43ce-b2f9-fd2397320ec7",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023-10-29 12:19:58.062804: I tensorflow/core/platform/cpu_feature_guard.cc:142] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
-      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Model: \"sequential\"\n",
-      "_________________________________________________________________\n",
-      "Layer (type)                 Output Shape              Param #   \n",
-      "=================================================================\n",
-      "conv2d (Conv2D)              (None, 254, 254, 32)      896       \n",
-      "_________________________________________________________________\n",
-      "max_pooling2d (MaxPooling2D) (None, 127, 127, 32)      0         \n",
-      "_________________________________________________________________\n",
-      "conv2d_1 (Conv2D)            (None, 125, 125, 64)      18496     \n",
-      "_________________________________________________________________\n",
-      "max_pooling2d_1 (MaxPooling2 (None, 62, 62, 64)        0         \n",
-      "_________________________________________________________________\n",
-      "conv2d_2 (Conv2D)            (None, 60, 60, 64)        36928     \n",
-      "_________________________________________________________________\n",
-      "max_pooling2d_2 (MaxPooling2 (None, 30, 30, 64)        0         \n",
-      "_________________________________________________________________\n",
-      "flatten (Flatten)            (None, 57600)             0         \n",
-      "_________________________________________________________________\n",
-      "dense (Dense)                (None, 128)               7372928   \n",
-      "_________________________________________________________________\n",
-      "dropout (Dropout)            (None, 128)               0         \n",
-      "_________________________________________________________________\n",
-      "dense_1 (Dense)              (None, 1)                 129       \n",
-      "=================================================================\n",
-      "Total params: 7,429,377\n",
-      "Trainable params: 7,429,377\n",
-      "Non-trainable params: 0\n",
-      "_________________________________________________________________\n"
-     ]
-    }
-   ],
-   "source": [
-    "#create_tf_model().summary()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6a8c9322-af44-40fe-ab2f-364fc95e211f",
-   "metadata": {},
-   "source": [
-    "* ### Early Stopping "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e1bb8333-526a-4aaa-86cd-9b1ea3c38fb8",
-   "metadata": {},
-   "source": [
-    "## Fit model for model training"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "id": "020d97cf-9581-411d-8e94-85661a66619e",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023-10-29 12:20:05.159727: I tensorflow/compiler/mlir/mlir_graph_optimization_pass.cc:185] None of the MLIR Optimization Passes are enabled (registered 2)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1/10\n",
-      "55/55 [==============================] - 123s 2s/step - loss: 0.7081 - accuracy: 0.5537 - val_loss: 0.6658 - val_accuracy: 0.5918\n",
-      "Epoch 2/10\n",
-      "55/55 [==============================] - 113s 2s/step - loss: 0.6662 - accuracy: 0.6144 - val_loss: 0.6329 - val_accuracy: 0.6378\n",
-      "Epoch 3/10\n",
-      "55/55 [==============================] - 117s 2s/step - loss: 0.6153 - accuracy: 0.6691 - val_loss: 0.5433 - val_accuracy: 0.7245\n",
-      "Epoch 4/10\n",
-      "55/55 [==============================] - 115s 2s/step - loss: 0.6023 - accuracy: 0.6758 - val_loss: 0.5308 - val_accuracy: 0.6939\n",
-      "Epoch 5/10\n",
-      "55/55 [==============================] - 115s 2s/step - loss: 0.5755 - accuracy: 0.7150 - val_loss: 0.5247 - val_accuracy: 0.7347\n",
-      "Epoch 6/10\n",
-      "55/55 [==============================] - 114s 2s/step - loss: 0.5501 - accuracy: 0.7313 - val_loss: 0.5138 - val_accuracy: 0.7449\n",
-      "Epoch 7/10\n",
-      "55/55 [==============================] - 113s 2s/step - loss: 0.5573 - accuracy: 0.7246 - val_loss: 0.4932 - val_accuracy: 0.7551\n",
-      "Epoch 8/10\n",
-      "55/55 [==============================] - 111s 2s/step - loss: 0.5589 - accuracy: 0.7321 - val_loss: 0.4688 - val_accuracy: 0.7755\n",
-      "Epoch 9/10\n",
-      "55/55 [==============================] - 111s 2s/step - loss: 0.5191 - accuracy: 0.7513 - val_loss: 0.4785 - val_accuracy: 0.7449\n",
-      "Epoch 10/10\n",
-      "55/55 [==============================] - 115s 2s/step - loss: 0.5277 - accuracy: 0.7276 - val_loss: 0.4575 - val_accuracy: 0.7806\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<keras.callbacks.History at 0x7f3e0f99c4c0>"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#model = create_tf_model()\n",
-    "#model.fit(train_set,\n",
-    "#          epochs=10,\n",
-    "#          steps_per_epoch=len(train_set.classes) // batch_size,\n",
-    "#          validation_data=validation_set,\n",
-    "#          callbacks=[early_stop],\n",
-    "#          verbose=1\n",
-    "#          )"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e627f81c-40ac-4aa1-a354-71adf7ce2cf6",
-   "metadata": {},
-   "source": [
-    "## Save model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a1d898ac-306b-4619-a660-0593da248238",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#model.save('outputs/v1/pizza_detector_model.h5')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a0411441-aba3-4133-8365-f5fdd71769bd",
    "metadata": {},
    "source": [
     "---"
@@ -1248,17 +1019,28 @@
     "losses = pd.DataFrame(model.history.history)\n",
     "\n",
     "sns.set_style(\"whitegrid\")\n",
+    "\n",
+    "# Plot training and validation loss values\n",
     "losses[['loss', 'val_loss']].plot(style='.-')\n",
     "plt.title(\"Loss\")\n",
+    "\n",
+    "# Save the loss plot as an image\n",
     "plt.savefig(f'{file_path}/model_training_losses.png',\n",
     "            bbox_inches='tight', dpi=150)\n",
+    "\n",
     "plt.show()\n",
     "\n",
+    "# Print a newline for separation\n",
     "print(\"\\n\")\n",
+    "\n",
+    "# Plot training and validation accuracy values\n",
     "losses[['accuracy', 'val_accuracy']].plot(style='.-')\n",
     "plt.title(\"Accuracy\")\n",
+    "\n",
+    "# Save the accuracy plot as an image\n",
     "plt.savefig(f'{file_path}/model_training_acc.png',\n",
     "            bbox_inches='tight', dpi=150)\n",
+    "\n",
     "plt.show()"
    ]
   },
@@ -1391,7 +1173,7 @@
     "from tensorflow.keras.preprocessing import image\n",
     "\n",
     "pointer = 66\n",
-    "label = labels[0]  # select Uninfected or Parasitised\n",
+    "label = labels[0]  # select Pizza or not Pizza\n",
     "\n",
     "pil_image = image.load_img(test_path + '/' + label + '/' + os.listdir(test_path+'/' + label)[pointer],\n",
     "                           target_size=image_shape, color_mode='rgb')\n",
@@ -1494,7 +1276,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#!cat .gitignore"
+    "#Adds Test and Train datasets to gitignore so as to not overload either Github or Heroku.\n",
+    "!cat .gitignore"
    ]
   },
   {
@@ -1512,7 +1295,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#!git status"
+    "!git status"
    ]
   },
   {
@@ -1530,7 +1313,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#!git add ."
+    "!git add ."
    ]
   },
   {
@@ -1548,7 +1331,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#!git commit -am \" Add new plots\""
+    "!git commit -m \"Add new plots\""
    ]
   },
   {
@@ -1566,7 +1349,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#!git push"
+    "!git push"
    ]
   }
  ],
