--- a/jupyter_notebooks/03 - ModellingAndEvaluating.ipynb
+++ b/jupyter_notebooks/03 - ModellingAndEvaluating.ipynb
@@ -920,7 +920,7 @@
    ],
    "source": [
     "# Early Stopping to prevent overfitting\n",
-    "early_stop = EarlyStopping(monitor='val_loss', patience=3)\n",
+    "early_stop = EarlyStopping(monitor='val_loss', patience=5)\n",
     "\n",
     "# Load the pre-trained VGG16 model\n",
     "base_model = VGG16(weights='imagenet', include_top=False, input_shape=image_shape)\n",
@@ -929,14 +929,11 @@
     "x = base_model.output\n",
     "x = Flatten()(x)\n",
     "\n",
-    "# Add a Dense layer with L2 regularization\n",
-    "x = Dense(32, activation='relu', kernel_regularizer=l2(0.01))(x)\n",
+    "# Add a Dense layer\n",
+    "x = Dense(16, activation='relu')(x)\n",
     "\n",
     "# Add a Dropout layer\n",
     "x = Dropout(0.5)(x)\n",
-    "\n",
-    "# Add another Dense layer with L2 regularization\n",
-    "x = Dense(16, activation='relu', kernel_regularizer=l2(0.01))(x)\n",
     "\n",
     "predictions = Dense(1, activation='sigmoid')(x)\n",
     "\n",
@@ -947,12 +944,16 @@
     "for layer in base_model.layers:\n",
     "    layer.trainable = False\n",
     "\n",
-    "# Compile the model\n",
-    "model.compile(optimizer=Adam(learning_rate=0.001), loss='binary_crossentropy', metrics=['accuracy'])\n",
+    "# Compile the model - changing from 0.001 to 0.0001\n",
+    "model.compile(optimizer=Adam(learning_rate=0.0001), loss='binary_crossentropy', metrics=['accuracy'])\n",
+    "\n",
+    "# Define ModelCheckpoint\n",
+    "checkpoint = ModelCheckpoint('best_model.h5', monitor='val_loss', save_best_only=True)\n",
+    "callbacks = [early_stop, checkpoint]\n",
     "\n",
     "# Fit and Train the model with the data\n",
     "model.fit(train_set, \n",
-    "          epochs=10, \n",
+    "          epochs=5, \n",
     "          steps_per_epoch=len(train_set.classes) // batch_size, \n",
     "          validation_data=validation_set, \n",
     "          callbacks=[early_stop], \n",
@@ -1248,7 +1249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 48,
    "id": "3b009f66-d26c-4425-b09e-a0d848371d1a",
    "metadata": {},
    "outputs": [
@@ -1256,8 +1257,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.5003245770931244\n",
-      "not_pizza\n"
+      "0.96352696\n",
+      "pizza\n"
      ]
     }
    ],
